browse.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

html {
    scroll-behavior: smooth;
    background-color: #2c2c2c;
}

li {
    list-style-type: none;
}

a {
    font-size: 18px;
    text-decoration: none;
}

h2 {
    font-weight: 900;
    font-size: 32px;
    color: #4aa584;
    padding-left: 8px;
}

.click {
    cursor: pointer;
}

.green {
    color: #4aa584;
}

.row {
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
}

/*

    NAV

*/

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 48px;
    height: 100px;
    letter-spacing: 0.5px;
}

.nav__logo {
    height: 44px;
    width: 44px;
    filter: invert(100%);
}

.nav__logo--wrapper {
    display: flex;
    align-items: center;
}

.nav__link--list {
    display: flex;
    align-items: center;
}

.nav__link {
    margin: 0 24px;
}

.nav__link:last-child {
    margin: 0 0 0 44px;
}

.nav__link--anchor {
    font-size: 18px;
    color: #fff;
    font-weight: 600;
}

.link__hover-effect {
    position: relative;
}

.link__hover-effect--black:after {
    background-color: #fff;
}

.link__hover-effect:hover:after {
    left: 0;
    width: 100%;
}

.link__hover-effect:after {
    content: "";
    position: absolute;
    bottom: -3px;
    height: 3px;
    right: 0;
    width: 0;
    transition: all 300ms ease;
}

.nav__link--btn {
    font-size: 18px;
    font-weight: 600;
    padding: 14px 44px;
    border-radius: 999px;
    border: none;
    color: #4aa584;
    background-color: #fff;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    transition: all 300ms ease;
}

.btn__hover-effect--green:hover {
    background-color: #2e6853;
    color: #fff;
}

/*

    HEADER

*/

.header {
    padding: 24px 96px 0 96px;
}

.header__content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

.title {
    font-size: 42px;
    letter-spacing: 2px;
    font-weight: 700;
}

.header__search--wrapper {
    margin: 40px 0 0 40px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header__search {
    padding: 14px 32px 14px 32px;
    width: 580px;
    font-size: 26px;
    border-radius: 55px;
    position: relative;
    border: solid 1px #242424;
}

.magnifying-glass {
    filter: invert(53%) sepia(44%) saturate(416%) hue-rotate(107deg) brightness(98%) contrast(94%);
    transition: all 300ms ease;
    height: 40px;
    width: 40px;
}

.magnifying-glass:hover {
    filter: invert(28%) sepia(59%) saturate(367%) hue-rotate(107deg) brightness(105%) contrast(88%);
}

.search-btn {
    right:80px;
    position: relative;
    height: 40px;
    width: 40px;
    border: none;
    background-color: transparent;
}

.landing-img {
    margin-top: 24px;
}

.movie-collage {
    z-index: -999;
    position: absolute;
    opacity: 0.10;
    height: 100%;
    width: 100%;
    max-height: 100vh;
    max-width: 100vw;
}

/*

    BROWSE MOVIES

*/

#browse {
    margin-top: 26px;
}

.decor {
    background-color: #272727;
    min-height: 650px;
}

.movies--wrapper {
    padding: 16px 16px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.movie {
    background-color: rgb(245, 245, 245);
    max-width: calc(31.66%);
    width: 100%;
    padding: 18px;
    margin-bottom: 26px;
    display: flex;
    flex-direction: column;
    transition: all 300ms ease;
}

.movie:hover {
    transform: scale(1.05);
}

.browse__title--wrapper {
    display: flex;
    justify-content: space-between;
    padding: 12px 24px;
}

.loading__visible {
    display: flex;
    z-index: 1;
}

.loading {
    background
    height: 100%;
    width: 100%;
    z-index: -1;
}

